--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico">
+    <script src="https://www.youtube.com/iframe_api"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="">
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    
     <title>Vid To Map</title>
     <style>
         #myVideo{
@@ -21,14 +23,10 @@
     </style>
 </head>
 <body>
-    <video id="myVideo" controls>
-        <source src="video.mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
-    </video>
+    <div id="myVideo"></div>
     <div id="map">
 
         <script src="index.js"></script>
     </div>
-    
 </body>
 </html>
